# RobustOCS

./: CODE_OF_CONDUCT.md  LICENSE  README.md  example.py  pyproject.toml  robust-genetics.ipynb  robust-genetics.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  feature-request.md
.github/workflows/: check-build.yml  check-pedigree.yml
Code/: README.md  robust-notes.ipynb  simple-point.m
Code/GregorExample/: EBV50.txt  README.md
Example/: README.md  S50.txt
Example/04/: S04.txt
Example/50/: A50.txt
Example2/: A02.txt  README.md  n2-test.ipynb
JAJH/: robust.py  robust2.py  robust3.py
MATLAB/: cla_genetics.m  cla_genetics_robust.m
Scratch/: README.md  example2.ped  numerical-error.ipynb  risk-minimization.ipynb  robust-notes.ipynb  simple-robust.m
Scratch/Example/: README.md  S02.txt  n2-test.ipynb
Scratch/Timing Test/: README.md  timing-test.ipynb  timing-test.py
Writing/: main.tex  ref.bib
alphargs/: __init__.py  loaders.py  solvers.py  utils.py
examples/: README.md
examples/04/: A04.txt  S04.txt  SEX04.txt  example.ipynb  test.py
examples/1000/: EBV1000.txt  README.md  SEX1000.txt  solution_rob.txt  solution_std.txt  test.py  timing.sh
examples/50/: SEX50.txt  example.py  solution_rob.txt  solution_std.txt  test.py
examples/ped/: test.py
robustocs/: __init__.py  clasbes.ipynb  loaders.py  pedigree.py  solvers.py  utils.py
